--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
 
     <!-- ######################## Home Page Section End ######################## -->
 
+
+    <!-- ######################## Progress Page Section Begin ######################## -->
+      <div class="progress">
+        
+      </div>
+
+    <!-- ######################## Progress Page Section End ######################## -->
+
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
   </body>
 </html>
